--- a/templates/company/modal-save.html
+++ b/templates/company/modal-save.html
@@ -26,11 +26,11 @@
 					<form>
 						<div class="mb-3">
 							<label for="password" class="form-label">Senha</label>
-							<input type="password" class="form-control border border-danger" id="password" placeholder="Digite a senha">
+							<input type="password" class="form-control border border-danger" id="passwordId" placeholder="Senha de no mínimo de 6 digitos">
 						</div>
 						<div class="mb-3">
 							<label for="confirm-password" class="form-label">Confirme a Senha</label>
-							<input type="password" class="form-control border border-danger" id="confirm-password" placeholder="Confirme a senha">
+							<input type="password" class="form-control border border-danger" id="confirmPasswordId" placeholder="Confirme a senha">
 						</div>
 					</form>
 
