--- a/templates/company/modal-address.html
+++ b/templates/company/modal-address.html
@@ -11,33 +11,33 @@
 				<div class="modal-body">
 					<div class="row">
 						<div class="col-9">
-							<label for="company-street">Rua</label>
+							<label for="company-street-id">Rua</label>
 							<input id="company-street-id" name="company-street" type="text" class="form-control"/>
 						</div>
 						<div class="col-3">
-							<label for="company-number">N.</label>
+							<label for="company-number-id">N.</label>
 							<input id="company-number-id" name="company-number" type="text" class="form-control"/>
 						</div>
 						<div class="col-12">
-							<label for="company-complement">Complemento</label>
+							<label for="company-complement-id">Complemento</label>
 							<input id="company-complement-id" name="company-complement" type="text" class="form-control" placeholder="Portaria, ponto de referencia, etc"/>
 						</div>
 
 						<div class="col-9">
-							<label for="company-city">Cidade</label>
+							<label for="company-city-id">Cidade</label>
 							<input id="company-city-id" name="company-city" type="text" class="form-control border border-danger" value="São José dos Campos"/>
 						</div>
 						<div class="col-3">
-							<label for="company-state">Estado</label>
+							<label for="company-state-id">Estado</label>
 							<input id="company-state-id" name="company-state" type="text" class="form-control"/>
 						</div>
 
 						<div class="col-6">
-							<label for="company-zip">CEP</label>
+							<label for="company-zip-id">CEP</label>
 							<input id="company-zip-id" name="company-zip" type="text" class="form-control" rows="4"></input>
 						</div>
 						<div class="col-6">
-							<label for="company-country">País</label>
+							<label for="company-country-id">País</label>
 							<input id="company-country-id" name="company-country" type="text" class="form-control" rows="4"></input>
 						</div>
 					</div>
