--- a/templates/company/modal-contact.html
+++ b/templates/company/modal-contact.html
@@ -10,7 +10,7 @@
 							<h3 class="modal-title">Dados do administrador</h3>
 						</div>
 						<div class="col-12">
-							<label>Usuário que vai administrar o sistema. Outros usuários podem ser acrescentados mais tarde.</label>
+							<span>Usuário que vai administrar o sistema. Outros usuários podem ser acrescentados mais tarde.</span>
 						</div>
 					</div>
 				</div>
@@ -18,17 +18,17 @@
 				<div class="modal-body">
 					<div class="row">
 						<div class="col-12">
-							<label for="company-admin">Nome do administrador</label>
+							<label for="company-admin-id">Nome do administrador</label>
 							<input id="company-admin-id" name="company-admin" type="text" class="form-control border border-danger" value="Heron"/>
 						</div>
 
 						<div class="col-12">
-							<label for="company-email">Email usado para recuperação de senha</label>
+							<label for="company-email-id">Email usado para recuperação de senha</label>
 							<input id="company-email-id" name="company-email" type="text" class="form-control border border-danger" value="heron@gmail.com"/>
 						</div>
 
 						<div class="col-12">
-							<label for="company-phone">Telefone</label>
+							<label for="company-phone-id">Telefone</label>
 							<input id="company-phone-id" name="company-phone" type="text" class="form-control border border-danger" value="12"/>
 						</div>
 					</div>
