--- a/templates/company/modal-save.html
+++ b/templates/company/modal-save.html
@@ -17,19 +17,19 @@
 
 					<div class="form-check">
 						<input class="form-check-input" type="checkbox" id="termsCheckId">
-						<label id="termsCheckLabelId" class="text-danger" for="termsCheck">
+						<span id="termsCheckLabelId" class="text-danger" for="termsCheck">
 							Eu li e aceito os termos e condições
-						</label>
+						</span>
 					</div>
 
 					<hr>
 					<form>
 						<div class="mb-3">
-							<label for="password" class="form-label">Senha</label>
-							<input type="password" class="form-control border border-danger" id="passwordId" placeholder="Senha de no mínimo de 6 digitos">
+							<label for="passwordId" class="form-label">Senha</label>
+							<input type="password" class="form-control border border-danger" id="passwordId" placeholder="Senha de no mínimo de 8 digitos" value="12345678">
 						</div>
 						<div class="mb-3">
-							<label for="confirm-password" class="form-label">Confirme a Senha</label>
+							<label for="confirmPasswordId" class="form-label">Confirme a Senha</label>
 							<input type="password" class="form-control border border-danger" id="confirmPasswordId" placeholder="Confirme a senha">
 						</div>
 					</form>
