--- a/templates/company/modal-sumary.html
+++ b/templates/company/modal-sumary.html
@@ -10,7 +10,7 @@
 							<h3 class="modal-title">Resumo:</h3>
 						</div>
 						<div class="col-12">
-							<label>Confirme os dados e gera uma senha ou revise os dados.</label>
+							<span>Confirme os dados e gera uma senha ou revise os dados.</span>	
 						</div>
 					</div>
 				</div>
