--- a/templates/company/modal-name.html
+++ b/templates/company/modal-name.html
@@ -11,7 +11,7 @@
 				<div class="modal-body">
 					<div class="row">
 						<div class="col-12">
-							<label for="company-name">Digite o nome da sua empresa</label>
+							<label for="company-name-id">Digite o nome da sua empresa</label>
 							<input id="company-name-id" name="company-name" type="text" class="form-control border border-danger" value="Cantina da Nena"/>
 						</div>
 					</div>
@@ -19,11 +19,11 @@
 					<hr>
 					<div class="row">
 						<div class="col-12">
-							<label for="company-description">Fale um pouco sobre sua empresa</label>
+							<label for="company-description-id">Fale um pouco sobre sua empresa</label>
 							<textarea id="company-description-id" name="company-description" type="text" class="form-control" rows="4" placeholder="Restaurante tradicional fundado em 2010 voltado a alimentação saudável"></textarea>
 						</div>
 						<div class="col-12">
-							<label>Campo opcional e pode ser alterado mais tarde</label>
+							<span>Campo opcional e pode ser alterado mais tarde</span>
 						</div>
 					</div>
 
