--- a/templates/company/modal-name.html
+++ b/templates/company/modal-name.html
@@ -1,6 +1,6 @@
 {{define "company-name-modal"}}
 <div class="row d-flex justify-content-center">
-	<div class="modal modal-xl fade" id="company-name-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div class="modal modal-xl fade" id="company-name-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 
