--- a/templates/company/modal-save.html
+++ b/templates/company/modal-save.html
@@ -1,6 +1,6 @@
 {{define "company-save-modal"}}
 <div class="row d-flex justify-content-center">
-	<div class="modal modal-xl fade" id="company-save-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div class="modal modal-xl fade" id="company-save-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 
@@ -26,7 +26,7 @@
 					<form>
 						<div class="mb-3">
 							<label for="passwordId" class="form-label">Senha</label>
-							<input type="password" class="form-control border border-danger" id="passwordId" placeholder="Senha de no mínimo de 8 digitos" value="12345678">
+							<input type="password" class="form-control border border-danger" id="passwordId" placeholder="Senha de no mínimo de 8 digitos">
 						</div>
 						<div class="mb-3">
 							<label for="confirmPasswordId" class="form-label">Confirme a Senha</label>
