Redirecionando para página de login em caso de erro

--- a/templates/login.html
+++ b/templates/login.html
@@ -52,7 +52,7 @@
 			.then(data => {
 				if (data.message) {
 					alert(data.message);
-					window.location.href = '/todos';
+					window.location.href = '/admin';
 				} else if (data.error) {
 					alert(data.error);
 				}
