--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,6 +28,9 @@
 			<li class="nav-item {{ if .company_active }} {{ .company_active }} {{end}}">
 				<a class="nav-link active" aria-current="page" href="/company">Empresa</a>
 			</li>
+			<li class="nav-item {{ if .admin_active }} {{ .company_active }} {{end}}">
+				<a class="nav-link active" aria-current="page" href="/admin">Administação</a>
+			</li>
 		</ul>
 	  </div>
 	</div>
