--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
 						<form id="login-form">
 							<div class="form-group">
 								<label for="email">Email:</label>
-								<input type="email" class="form-control" id="email" name="email" value="{{ .email }}">
+								<input type="email" class="form-control" id="email" name="email" value="heron@gmail.com">
 							</div>
 							<div class="form-group mt-3">
 								<div class="row">
@@ -25,7 +25,7 @@
 										</button>
 									</div>
 									<div class="col-11">
-										<input type="password" class="form-control" id="password" name="password">
+										<input type="password" class="form-control" id="password" name="password" value="123456789">
 									</div>
 								</div>
 							</div>
@@ -51,7 +51,6 @@
 			.then(response => response.json())
 			.then(data => {
 				if (data.message) {
-					alert(data.message);
 					window.location.href = '/admin';
 				} else if (data.error) {
 					alert(data.error);
