--- a/templates/login.html
+++ b/templates/login.html
@@ -19,12 +19,12 @@
 							</div>
 							<div class="form-group mt-3">
 								<div class="row">
-									<div class="col-1">
-										<button type="submit" class="btn" title="Login">
-											<i class="bi bi-box-arrow-in-right"></i>
+									<div class="col-3">
+										<button type="submit" class="btn text-success" title="Login">
+											Entrar
 										</button>
 									</div>
-									<div class="col-11">
+									<div class="col-9">
 										<input type="password" class="form-control" id="password" name="password" value="123456789">
 									</div>
 								</div>
